[package]
name = "lantern"
version = "0.1.0"
authors = ["Artem Chistyakov <chistyakov.artem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
actix-files = "0.1.7"
actix-web = "1.0"
actix-web-actors = "1.0"
chrono = "0.4.10"
futures = "0.1"
rand = "0.7.3"
rusqlite = { version = "0.20.0", features = ["chrono"] }
scrypt = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
