[package]
name = "lantern"
version = "0.3.0"
authors = ["Artem Chistyakov <chistyakov.artem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-files = "0.2.1"
actix-web = "2.0"
actix-web-actors = "2.0"
chrono = "0.4.10"
futures = "0.3"
rand = "0.7.3"
regex = "1"
rusqlite = { version = "0.20.0", features = ["chrono", "bundled"] }
scrypt = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
