[package]
name = "lantern"
version = "0.4.0"
authors = ["Artem Chistyakov <chistyakov.artem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = "4.3"
actix-web-actors = "4.2"
chrono = "0.4"
futures = "0.3"
rand = "0.8.5"
regex = "1"
rusqlite = { version = "0.28.0", features = ["chrono", "bundled"] }
scrypt = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]
